--- a/exam/2023/Exam_mie37_2023.ipynb
+++ b/exam/2023/Exam_mie37_2023.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Final Exam 2023\n",
+    "title: MIE 37 - Final Exam 2023\n",
     "format:\n",
     "    html: default\n",
     "    ipynb: default\n",
@@ -17,8 +17,11 @@
     "\n",
     "__Surname__: \n",
     "\n",
-    "After completing the following questions, send the edited notebook to `pwinant@ensae.fr`.\n",
-    "You are allowed to use any available resource (but not copy/paste any code). Also, don't forget to comment your code and take any initiative, you find relevant.\n"
+    "After completing the following questions, send the edited notebook to `pablo.winant@ensae.fr`.\n",
+    "\n",
+    "You are allowed to use any online available resource, even to install Julia packages, but not to copy/paste any code.\n",
+    "\n",
+    "Also, don't forget to comment your code and take any initiative you find relevant.\n"
    ]
   },
   {
